// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerMeterList AJAX requests state rendering 1`] = `
Object {
  "body": Array [
    Array [
      "<a href=\\"/meter/SM15R-01-00000001/\\">SM15R-01-00000001</i></a>",
      "tarïff01",
      "Auto (Off)",
      "visiblecustomer1",
      "code1",
      "+123456 <i class=\\"icon-ok icon-success\\"/>",
      0,
      "",
      "test_grid_1",
      "<button class=\\"btn btn-info detail-btn\\" data-action=\\"view\\" data-toggle=\\"collapse\\"data-target=\\"undefined\\">View</button>",
    ],
    Array [
      "<a href=\\"/meter/SM15R-01-00000002/\\">SM15R-01-00000002</i></a>",
      "tarïff01",
      "Auto (Off)",
      "visiblecustomer2",
      "code2",
      "+123456 <i class=\\"icon-ok icon-success\\"/>",
      0,
      "0, 0",
      "test_grid_2",
      "<button class=\\"btn btn-info detail-btn\\" data-action=\\"view\\" data-toggle=\\"collapse\\"data-target=\\"undefined\\">View</button>",
    ],
    Array [
      "<a href=\\"/meter/SM15R-01-00000003/\\">SM15R-01-00000003</i></a>",
      "tarïff01",
      "Auto (On)",
      "visiblecustomer3",
      "code3",
      "+123456 ",
      43,
      "",
      "test_grid_3",
      "<button class=\\"btn btn-info detail-btn\\" data-action=\\"view\\" data-toggle=\\"collapse\\"data-target=\\"undefined\\">View</button>",
    ],
    Array [
      "<a href=\\"/meter/SM15R-01-00000004/\\">SM15R-01-00000004</i></a>",
      "tarïff01",
      "Auto (On)",
      "hiddencustomer",
      "code4",
      "+123456 ",
      10,
      "0, 0",
      "test_grid_1",
      "<button class=\\"btn btn-info detail-btn\\" data-action=\\"view\\" data-toggle=\\"collapse\\"data-target=\\"undefined\\">View</button>",
    ],
  ],
  "footer": null,
  "header": Array [
    "Serial",
    "Tariff Level",
    "State",
    "Customer Name",
    "Customer Code",
    "Phone Number",
    "Total Credit",
    "Coords",
    "Ground",
    "Details",
  ],
}
`;

exports[`CustomerMeterList AJAX requests tag rendering 1`] = `"<span class=\\"label label-info\\">Credit: 0</span>&nbsp;<span class=\\"label label-info\\" data-type=\\"tags\\">Tag: foo</span>&nbsp;<span class=\\"label label-info\\" data-type=\\"tags\\">Tag: bar</span>&nbsp;<span class=\\"label label-info\\" data-type=\\"tags\\">Tag: baz</span>&nbsp;"`;

exports[`CustomerMeterList Customer meter csv export should work 1`] = `
Object {
  "body": Array [
    Array [
      "<a href=\\"/meter/SM15R-01-00000001/\\">SM15R-01-00000001</i></a>",
      "tarïff01",
      2,
      "visiblecustomer1",
      "code1",
      "+123456",
      true,
      0,
      "strëet, street1, city, state",
      "",
      "tag1",
      true,
      0,
      0,
      0,
    ],
    Array [
      "<a href=\\"/meter/SM15R-01-00000002/\\">SM15R-01-00000002</i></a>",
      "tarïff01",
      2,
      "visiblecustomer2",
      "code2",
      "+123456",
      true,
      0,
      "strëet, street2, city, state",
      "0, 0",
      "tag1 tag2",
      true,
      0,
      0,
      0,
    ],
    Array [
      "<a href=\\"/meter/SM15R-01-00000003/\\">SM15R-01-00000003</i></a>",
      "tarïff01",
      2,
      "visiblecustomer3",
      "code3",
      "+123456",
      false,
      43,
      "",
      "",
      "",
      true,
      10,
      0,
      33,
    ],
    Array [
      "<a href=\\"/meter/SM15R-01-00000004/\\">SM15R-01-00000004</i></a>",
      "tarïff01",
      2,
      "hiddencustomer",
      "code4",
      "+123456",
      false,
      10,
      "strëet, street4, city, state",
      "0, 0",
      "",
      false,
      10,
      8,
      0,
    ],
  ],
  "footer": null,
  "header": Array [
    "Serial",
    "Tariff Level",
    "State",
    "Customer Name",
    "Customer Code",
    "Phone Number",
    "Verified",
    "Total Credit",
    "Address",
    "Coords",
    "Tags",
    "Active",
    "Credit",
    "Debt",
    "Plan",
  ],
}
`;

exports[`CustomerMeterList Events render details 1`] = `"<span class=\\"label label-info\\">Credit: 10</span>&nbsp;<span class=\\"label label-info\\">Debt: 20</span>&nbsp;<span class=\\"label label-info\\">Plan: 30</span>&nbsp;<span class=\\"label label-info\\">Address: address1 address2</span>&nbsp;<span class=\\"label label-info\\">City: city</span>&nbsp;<span class=\\"label label-info\\">State: state</span>&nbsp;<span class=\\"label label-info\\">Coords: coords</span>&nbsp;"`;

exports[`CustomerMeterList list summarization should work 1`] = `"Showing meters 1 to 10 (of a total of 40) "`;
